# Audio-hub

./: .gitignore  BUGS_ANALYSIS.md  CHANGELOG.md  DISTRIBUTION.md  FLATHUB_SUBMISSION.md  FLATHUB_SUBMISSION_PLAN.md  INSTALL.md  LICENSE  LOGO_CREATED.md  Makefile  PROJECT_INDEX.md  QUICK_COMMANDS.sh  README.md  SUBMISSION_INDEX.md  audio-hub.py  audio_device_classifier.py  build-deb.sh  build-extension.sh  build-flatpak.sh  build.sh  extension.js  flathub.json  io.github.linux-audio-manager.json  io.github.linux-audio-manager.yml  launch.sh  linux-audio-manager.py  metadata.json  package.json  prepare-submission.sh  pyproject.toml  pyrightconfig.json  requirements.txt  stylesheet.css  submit-flathub.sh  test_audio.py  test_device_classifier.py  test_stream_identity.py  tray_helper.py
.github/workflows/: ci.yml
audiohub/: __init__.py  browser_streams.py  gtk_app.py  models.py  paths.py  pipewire.py
data/: audio-hub.desktop  com.audiohub.AudioHub.desktop  com.audiohub.AudioHub.metainfo.xml  com.audiohub.audiohub.metainfo.xml  io.github.linux-audio-manager.desktop  io.github.linux-audio-manager.metainfo.xml
data/icons/: README.md
debian/: .gitignore  control  deb-builder.py  rules
docs/: ARCHITECTURE.md  INDEX.md  V02-QUICKSTART.md  dependencies.md  partie2-plan.md  roadmap.md
docs/archive/: DECISIONS.md  GNOME_CONFORMITY_REPORT.md  MULTI-OUTPUT-IMPROVEMENTS.md  MULTI-OUTPUT-SUMMARY.md  STREAM-ROUTING.md  SUBMISSION_SUMMARY.md  changelog.md  gnome-structure.md
po/: fr.po  linux-audio-manager.pot
src/: __init__.py  audio.py  config.py  main.py  window.py
(+1 files in other folders)
