[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-audio-manager"
version = "0.1.0"
description = "A modern audio management application for Linux combining simple volume control with advanced PipeWire routing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Linux Audio Manager contributors"}
]
keywords = ["audio", "pipewire", "gtk", "gnome", "volume", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: French",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/linux-audio-manager"
Repository = "https://github.com/yourusername/linux-audio-manager.git"
Issues = "https://github.com/yourusername/linux-audio-manager/issues"

[project.scripts]
linux-audio-manager = "src.main:main"

[tool.setuptools]
packages = ["src"]
